--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'hugoserif@example.com'
-phone: '1800 123 000'
+email: 'chris@englishwithchris.hu'
+phone: '+36 20 123 4567'
 contact_button_link: 'contact'
