docs: update contact page details

--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,3 +1,3 @@
-email: 'chris@englishwithchris.hu'
-phone: '+36 20 123 4567'
+email: 'sixpointfiveplus@gmail.com'
+phone: '+36 30 911 8134'
 contact_button_link: 'contact'
